# eeg-ern-pipeline

./: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
eeg_ern_pipeline/: __init__.py  config.py  run_pipeline.py  utils.py
eeg_ern_pipeline/epoching/: epoching.py  main_epoch.py
eeg_ern_pipeline/ern/: ern_analysis.py  main_ern.py
eeg_ern_pipeline/preprocessing/: main_preprocess.py  preprocessing.py
